# MapReduce

./: .gitignore  CMakeLists.txt  README.md  high-level-design.md  main.cpp
include/: Master.hpp  RecursivelyEnumeratedSet.hpp  VisitedSet.hpp  Worker.hpp
src/: Master.cpp  RecursivelyEnumeratedSet.cpp  VisitedSet.cpp
tests/: graph-exploration.cpp  sudoku.cpp
